# FileScanner-AppWindows

./: .gitignore  LICENSE  README.md  build.ps1  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/rules/: malware_generic.yar  scripts_suspicious.yar
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/ai/: local_inference.rs
src-tauri/src/analyzer/: hash.rs  mime.rs  mod.rs  pe_parser.rs  script_parser.rs
src-tauri/src/api/: virustotal.rs
src-tauri/src/background/: updater.rs
src-tauri/src/commands_extra/: quarantine.rs
src-tauri/src/config/: clamav_updater.rs  settings.rs
src-tauri/src/report/: export.rs  types.rs
src-tauri/src/scanner/: clamav_db.rs  pipeline.rs  yara_engine.rs
src/assets/: main.css
src/components/: ClamavPanel.vue  DropZone.vue  ExportMenu.vue  IoCTable.vue  PeDetails.vue  QuarantineButton.vue  SettingsPanel.vue  StringsDetail.vue  VerdictDisplay.vue
src/stores/: scan.ts
src/types/: scan.ts
