[package]
name = "file-scanner"
version = "1.2.2"
edition = "2021"

[lib]
name = "file_scanner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util", "macros", "time"] }

# Hashing
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"

# PE Analysis
goblin = "0.9"

# MIME detection
tree_magic_mini = "3"

# HTTP client (rustls, pas d'OpenSSL)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Secure storage API key
keyring = "3"

# PDF export
printpdf = "0.6"

# Regex pour patterns de scan
regex = "1"

# ClamAV database parsing
flate2 = "1"
tar = "0.4"
dirs = "5"

# AES-256-GCM quarantine encryption (FIX C13)
aes-gcm = "0.10"
rand = "0.8"

# Logging
log = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
onnx = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
